Added class ZakFormGtkFormElement (abstract).

--- a/configure.ac
+++ b/configure.ac
@@ -39,7 +39,8 @@ AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE",
 AM_GLIB_GNU_GETTEXT
 
 # Checks for libraries.
-PKG_CHECK_MODULES(ZAKFORMGTK, [libzakform])
+PKG_CHECK_MODULES(ZAKFORMGTK, [libzakform
+                               gtk+-3.0])
 
 AC_SUBST(ZAKFORMGTK_CFLAGS)
 AC_SUBST(ZAKFORMGTK_LIBS)
