--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,13 +8,15 @@ lib_LTLIBRARIES = libzakformgtk.la
 
 libzakformgtk_la_SOURCES = \
                         form.c \
-                        formelement.c
+                        formelement.c \
+                        formelementcheck.c
 
 libzakformgtk_la_LDFLAGS = -no-undefined
 
 libzakformgtk_include_HEADERS = \
                              libzakformgtk.h \
                              form.h \
-                             formelement.h
+                             formelement.h \
+                             formelementcheck.h
 
 libzakformgtk_includedir = $(includedir)/libzakformgtk
