--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,7 +9,8 @@ lib_LTLIBRARIES = libzakformgtk.la
 libzakformgtk_la_SOURCES = \
                         form.c \
                         formelement.c \
-                        formelementcheck.c
+                        formelementcheck.c \
+                        formelemententry.c
 
 libzakformgtk_la_LDFLAGS = -no-undefined
 
@@ -17,6 +18,7 @@ libzakformgtk_include_HEADERS = \
                              libzakformgtk.h \
                              form.h \
                              formelement.h \
-                             formelementcheck.h
+                             formelementcheck.h \
+                             formelemententry.h
 
 libzakformgtk_includedir = $(includedir)/libzakformgtk
