--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,13 @@
+if PLATFORM_WIN32
+libmodulesext = -0.dll
+libmodulesdir = $(bindir)
+else
+libmodulesext = .so
+libmodulesdir = $(libdir)
+endif
+
+libzakformmodulesdir = `pkg-config --variable=modulesdir libzakform`
+
 LIBS = $(ZAKFORMGTK_LIBS)
 
 AM_CPPFLAGS = $(ZAKFORMGTK_CFLAGS) \
@@ -30,3 +40,10 @@ libzakformgtk_include_HEADERS = \
                              formelementtextview.h
 
 libzakformgtk_includedir = $(includedir)/libzakformgtk
+
+install-exec-hook:
+	cd $(libzakformmodulesdir) && \
+	ln -s -f $(libmodulesdir)/libzakformgtk$(libmodulesext) .
+
+uninstall-hook:
+	rm -f $(libzakformmodulesdir)/libzakformgtk$(libmodulesext)
