Missing gtk dependency on libzakformgtk.pc.

--- a/libzakformgtk.pc.in
+++ b/libzakformgtk.pc.in
@@ -7,6 +7,6 @@ modulesdir=@libdir@/@PACKAGE@/modules
 Name: @PACKAGE_NAME@
 Description: Class for form.
 Version: @PACKAGE_VERSION@
-Requires: libzakform
+Requires: libzakform gtk+-3.0
 Libs: -L${libdir} -lzakformgtk
 Cflags: -I${includedir}
