Debian pkg: adjustments for wheezy.

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,10 +1,10 @@
 [buildpackage]
 export-dir=../build_area
-debian-branch=debian/sid
+debian-branch=debian/wheezy
 ignore-new=True
 upstream-tree=BRANCH
 upstream-branch=master
 force-create=True
 export=WC
-dist=sid
+dist=wheezy
 pbuilder=True
