Debian pkg: setted jessie in gbp.conf.

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,10 +1,10 @@
 [buildpackage]
 export-dir=../build_area
-debian-branch=debian/wheezy
+debian-branch=debian/jessie
 ignore-new=True
 upstream-tree=BRANCH
 upstream-branch=master
 force-create=True
 export=WC
-dist=wheezy
+dist=jessie
 pbuilder=True
