--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,5 +1,5 @@
 [buildpackage]
-export-dir=../build_area
+export-dir=../build_area/wheezy
 debian-branch=debian/wheezy
 ignore-new=True
 upstream-tree=BRANCH
