--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,9 +1,9 @@
 [buildpackage]
-export-dir=../build_area/wheezy
+export-dir=./build/wheezy
 debian-branch=debian/wheezy
 ignore-new=True
 upstream-tree=BRANCH
-upstream-branch=master
+upstream-branch=develop
 force-create=True
 export=WC
 dist=wheezy
