--- a/debian/rules
+++ b/debian/rules
@@ -15,6 +15,8 @@
 
 
 export DEB_CFLAGS_MAINT_STRIP = -Werror=format-security
+export DEB_CPPFLAGS_MAINT_STRIP = -Werror=format-security
+export DEB_CXXFLAGS_MAINT_STRIP = -Werror=format-security
 
 
 %:
@@ -23,7 +25,7 @@ export DEB_CFLAGS_MAINT_STRIP = -Werror=format-security
 
 override_dh_auto_configure:
 	NOCONFIGURE="X" ./autogen.sh
-	dh_auto_configure
+	dh_auto_configure -- --enable-introspection
 
 override_dh_auto_install:
 	$(MAKE) DESTDIR=$$(pwd)/debian/tmp prefix=/usr install
